feat: java 21 (#24)
* feat:java 21

Signed-off-by: MutwakilX <144057106+Wadamzmail@users.noreply.github.com>

* fix(editor): prevent sentinel range pollution and refactor utilities

- Guard `validateRange` in `EditorFeatures` to prevent modifying shared `Range.NONE` and `Position.NONE` sentinels.
- Extract text appending logic from `EditorFeatures.append` into a new `Content.append` extension function in `contentExt.kt`.
- Add an `IDEEditor.isXmlAttribute` helper function to check if a selection is an XML attribute.
- Refactor `DocLint.newDocLint()` to remove cached provider streams, iterating directly over `ServiceLoader`, and add a nested `Provider` interface.
- Standardize formatting, add trailing commas, and convert eligible functions to expression bodies across modified files.

Signed-off-by: MutwakilX <144057106+Wadamzmail@users.noreply.github.com>

* feat(java-compiler): register `JrtFileSystemProvider` using `@AutoService`

- Annotate `JrtFileSystemProvider` with `@AutoService(FileSystemProvider.class)` to automatically generate the service provider configuration file.

Signed-off-by: MutwakilX <144057106+Wadamzmail@users.noreply.github.com>

* cleanup: remove AccessController and simplify code

- Remove usages of `AccessController.doPrivileged` and `PrivilegedAction` across multiple classes (`SystemImage`, `BasicImageReader`, `JrtFileSystemProvider`, `NativeImageBuffer`) as part of cleaning up deprecated APIs.
- Simplify initialization logic in `SystemImage` for `RUNTIME_HOME` and `modulesImageExists`.
- Refactor `BasicImageReader` to perform system property checks and `FileChannel` configuration directly without privileged blocks.
- Update `JrtFileSystemProvider` to instantiate `JrtFsLoader` directly and refine import statements.
- Simplify `NativeImageBuffer` static initializer to load the `jimage` library directly.
- Replace a `String.formatted` call with `String.format` in `JavaTokenizer` for better compatibility.
- Perform minor reformatting and indent